Fix CSS lagging behind the main puppetlabs site
Docs.puppetlabs was wider than it should have been this morning. Upon investigation, it looked like an additional item had been added to the header#header ul#global-navigation list, but our copy of style.css still had the width of those li elements set to 20%. This patch changes the ul's margin to match that of the main site (282px -> 180px), and changes the width of the li's to 17.5%.

--- a/source/files/stylesheets/style.css
+++ b/source/files/stylesheets/style.css
@@ -598,7 +598,7 @@ header#header h1 a span {
 /* @group Global Navigation */
 
 header#header ul#global-navigation{
-	margin-left: 282px;
+	margin-left: 180px;
 	margin-top: 18px;
   background: #2b2539;
   -webkit-border-top-left-radius: 6px;
@@ -609,7 +609,7 @@ header#header ul#global-navigation{
 
 header#header ul#global-navigation > li {
   margin: 0 -0.2em;
-  width: 20%;
+  width: 17.5%;
   max-width: 180px;
   display: inline-block;
 }
